# ProjectC

./: CMakeLists.txt  Interfaces.go  Resources.go  UserInterface.go  go.mod  go.sum  main.c  main.cpp  main.go
.github/workflows/: actions.yml
gameLib/: Interfaces.go  Resources.go  UserInterface.go  go.mod
include/: Button.h  CheckBox.h  DataStructs.h  Floor.h  Game.h  Graphics.h  LibTest.h  Map.h  Panel.h  PerlinNoiseGenerator.h  Resources.h  Serialiazation.h  Settings.h  Slider.h  SystemFunc.h  Text.h  TextBox.h  Tile.h  UI.h  UIComponent.h
src/: Button.c  Button.cpp  Camera.cpp  CheckBox.c  CheckBox.cpp  Floor.cpp  HashMap.c  LibTest.c  Map.c  Map.cpp  Panel.c  Panel.cpp  PerlinNoiseGenerator.cpp  ResourceLoader.c  Resources.cpp  Serialiazation.cpp  Settings.cpp  Slider.c  Slider.cpp  Text.c  Text.cpp  TextBox.c  TextBox.cpp  Thread.c  Tile.c  Tile.cpp  Vector.c  VideoSettings.c  VideoSettings.cpp
